--- a/index.html
+++ b/index.html
@@ -128,10 +128,10 @@
 
   <!-- Social Icons -->
   <div class="mt-6 flex space-x-6 fade-in fade-in-delay-6">
-     <a href="https://github.com/your-github" target="_blank" class="hover:scale-110 transition-transform">
+     <a href="https://github.com/Sarthakbhamare" target="_blank" class="hover:scale-110 transition-transform">
       <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original.svg" alt="GitHub" class="w-8 h-8 invert">
     </a>
-    <a href="https://linkedin.com/in/your-linkedin" target="_blank" class="hover:scale-110 transition-transform">
+    <a href="https://www.linkedin.com/in/sarthak-bhamare-899148288/" target="_blank" class="hover:scale-110 transition-transform">
       <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/linkedin/linkedin-original.svg" alt="LinkedIn" class="w-8 h-8">
     </a>
     <a href="https://instagram.com/your-instagram" target="_blank" class="hover:scale-110 transition-transform">
