--- a/index.html
+++ b/index.html
@@ -59,6 +59,35 @@
       z-index: 9999;
       transition: transform 0.1s ease;
     }
+      @media (max-width: 768px) {
+      nav ul {
+        flex-direction: column;
+        space-y-4: 1rem;
+        space-x-0: 0;
+      }
+      .text-7xl {
+        font-size: 2.5rem;
+      }
+      .text-4xl {
+        font-size: 1.75rem;
+      }
+      section#home {
+        padding: 1rem;
+      }
+      .w-52, .h-52 {
+        width: 130px;
+        height: 130px;
+      }
+      .max-w-2xl {
+        max-width: 90%;
+      }
+      .max-w-4xl {
+        max-width: 95%;
+      }
+      .max-w-6xl {
+        max-width: 95%;
+      }
+    }
   </style>
 </head>
 
@@ -74,41 +103,27 @@
   </script>
 
 <!-- Navbar -->
-<nav class="flex justify-between items-center px-6 py-4 bg-[#0f172a] shadow-md fade-in fade-in-delay-1 sticky top-0 z-50">
+<nav class="flex justify-between items-center px-6 py-4 bg-[#0f172a] shadow-md fade-in fade-in-delay-1 sticky top-0 z-50 flex-wrap md:flex-row flex-col gap-4">
   <div class="text-teal-400 font-bold text-lg">Sarthak Bhamare</div>
-  
-  <ul class="flex space-x-6 text-sm text-white">
-    <li>
-      <a href="#home" class="hover:text-teal-400 hover:drop-shadow-[0_0_10px_#14b8a6] transition">Home</a>
-    </li>
-    <li>
-      <a href="#about" class="hover:text-teal-400 hover:drop-shadow-[0_0_10px_#14b8a6] transition">About</a>
-    </li>
-    <li>
-      <a href="#skills" class="hover:text-teal-400 hover:drop-shadow-[0_0_10px_#14b8a6] transition">Skills</a>
-    </li>
-    <li>
-      <a href="#projects" class="hover:text-teal-400 hover:drop-shadow-[0_0_10px_#14b8a6] transition">Projects</a>
-    </li>
-    <li>
-      <a href="#experience" class="hover:text-teal-400 hover:drop-shadow-[0_0_10px_#14b8a6] transition">Experience</a>
-    </li>
-    <li>
-      <a href="#contact" class="hover:text-teal-400 hover:drop-shadow-[0_0_10px_#14b8a6] transition">Contact</a>
-    </li>
+
+  <ul class="flex md:flex-row flex-col md:space-x-6 space-y-2 md:space-y-0 text-sm text-white">
+    <li><a href="#home" class="hover:text-teal-400 hover:drop-shadow-[0_0_10px_#14b8a6] transition">Home</a></li>
+    <li><a href="#about" class="hover:text-teal-400 hover:drop-shadow-[0_0_10px_#14b8a6] transition">About</a></li>
+    <li><a href="#skills" class="hover:text-teal-400 hover:drop-shadow-[0_0_10px_#14b8a6] transition">Skills</a></li>
+    <li><a href="#projects" class="hover:text-teal-400 hover:drop-shadow-[0_0_10px_#14b8a6] transition">Projects</a></li>
+    <li><a href="#experience" class="hover:text-teal-400 hover:drop-shadow-[0_0_10px_#14b8a6] transition">Experience</a></li>
+    <li><a href="#contact" class="hover:text-teal-400 hover:drop-shadow-[0_0_10px_#14b8a6] transition">Contact</a></li>
   </ul>
 
- <a href="resume_frontend.pdf" 
+  <a href="resume_frontend.pdf" 
    target="_blank" 
    class="border border-teal-400 px-3 py-1 rounded text-teal-400 hover:bg-teal-400 hover:text-[#0f172a] hover:drop-shadow-[0_0_12px_#14b8a6] transition">
   Resume
 </a>
 </nav>
 
-
- <!-- Hero -->
-<section id="home" class="h-screen flex flex-col justify-center items-center text-center scale-100">
-  
+<!-- Hero -->
+<section id="home" class="min-h-screen flex flex-col justify-center items-center text-center px-4 pt-20 md:pt-0">
   <!-- Profile Image -->
   <div class="fade-in fade-in-delay-2">
     <img src="profile pic.jpg" alt="Profile Photo" class="w-52 h-52 rounded-full border-4 border-teal-400 shadow-lg object-cover mb-4" />
@@ -128,10 +143,10 @@
 
   <!-- Social Icons -->
   <div class="mt-6 flex space-x-6 fade-in fade-in-delay-6">
-     <a href="https://github.com/Sarthakbhamare" target="_blank" class="hover:scale-110 transition-transform">
+     <a href="https://github.com/your-github" target="_blank" class="hover:scale-110 transition-transform">
       <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original.svg" alt="GitHub" class="w-8 h-8 invert">
     </a>
-    <a href="https://www.linkedin.com/in/sarthak-bhamare-899148288/" target="_blank" class="hover:scale-110 transition-transform">
+    <a href="https://linkedin.com/in/your-linkedin" target="_blank" class="hover:scale-110 transition-transform">
       <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/linkedin/linkedin-original.svg" alt="LinkedIn" class="w-8 h-8">
     </a>
     <a href="https://instagram.com/your-instagram" target="_blank" class="hover:scale-110 transition-transform">
