--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
     </div>
     <div class="bg-[#1e293b] p-6 rounded-lg shadow-md w-72 edu-card transition hover:scale-105">
       <h4 class="text-white font-bold">🏫 Jaihind High School</h4>
-      <p>Class 10th CBSE<br>June 2019 - May 2020</p>
+      <p>Class 10th <br>June 2019 - May 2020</p>
       <p class="text-teal-400 mt-1">87.80%</p>
     </div>
   </div>
@@ -404,6 +404,7 @@
 </section>
 
  <!-- EmailJS Contact Form -->
+<section id="contact" class="py-20 px-6 bg-[#0f172a]">
 <h2 class="text-center text-3xl text-teal-400 font-bold mb-10">Contact Me</h2>
 <div class="max-w-6xl mx-auto grid gap-12">
   <form id="contact-form" class="glass-card max-w-lg mx-auto p-6 space-y-4">
@@ -413,6 +414,41 @@
     <button type="submit" class="bg-teal-400 text-[#0f172a] px-5 py-2 rounded hover:opacity-80 w-full">Send Message</button>
   </form>
 </div>
+<!-- Full-Screen Footer with Full-Width Top Border -->
+<footer class="w-full bg-[#0f172a] text-gray-400 py-8 mt-16 border-t border-teal-400">
+  <div class="max-w-7xl mx-auto px-6 flex flex-col md:flex-row justify-between items-center space-y-6 md:space-y-0">
+    
+    <!-- Left: Name & Copyright -->
+    <div class="text-center md:text-left">
+      <h4 class="text-white text-lg font-semibold">Sarthak Bhamare</h4>
+      <p class="text-sm">© 2025 All rights reserved.</p>
+    </div>
+    
+    <!-- Middle: Quick Links -->
+    <div class="flex flex-wrap justify-center space-x-4 md:space-x-6 text-sm">
+      <a href="#home" class="hover:text-teal-400 transition">Home</a>
+      <a href="#about" class="hover:text-teal-400 transition">About</a>
+      <a href="#skills" class="hover:text-teal-400 transition">Skills</a>
+      <a href="#projects" class="hover:text-teal-400 transition">Projects</a>
+      <a href="#experience" class="hover:text-teal-400 transition">Experience</a>
+      <a href="#contact" class="hover:text-teal-400 transition">Contact</a>
+    </div>
+
+    <!-- Right: Social Icons -->
+    <div class="flex space-x-4">
+      <a href="https://github.com/Sarthakbhamare" target="_blank" class="hover:scale-110 transition-transform">
+        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original.svg" alt="GitHub" class="w-8 h-8 invert">
+      </a>
+      <a href="https://www.linkedin.com/in/sarthak-bhamare-899148288/" target="_blank" class="hover:scale-110 transition-transform">
+        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/linkedin/linkedin-original.svg" alt="LinkedIn" class="w-8 h-8">
+      </a>
+      <a href="https://www.instagram.com/_sarthak_1224?igsh=MWw2ZzFmcXV0Y2p1dA==" target="_blank" class="hover:scale-110 transition-transform">
+        <img src="https://img.icons8.com/fluency/48/instagram-new.png" alt="Instagram" class="w-8 h-8">
+      </a>
+    </div>
+
+  </div>
+</footer>
 
 <script src="https://cdn.jsdelivr.net/npm/emailjs-com@2.6.4/dist/email.min.js"></script>
 <script>
