--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
     <li><a href="#contact" class="hover:text-teal-400 hover:drop-shadow-[0_0_10px_#14b8a6] transition">Contact</a></li>
   </ul>
 
-  <a href="resume_frontend.pdf" 
+  <a href="Sarthak_Main_resume.pdf" 
    target="_blank" 
    class="border border-teal-400 px-3 py-1 rounded text-teal-400 hover:bg-teal-400 hover:text-[#0f172a] hover:drop-shadow-[0_0_12px_#14b8a6] transition">
   Resume
@@ -138,7 +138,7 @@
   </p>
   <div class="mt-8 flex space-x-6 fade-in fade-in-delay-5">
     <a href="#projects" class="bg-teal-400 text-[#0f172a] px-6 py-3 rounded hover:opacity-80">View My Work</a>
-    <a href="resume_frontend.pdf" class="border border-teal-400 px-6 py-3 rounded text-teal-400 hover:bg-teal-400 hover:text-[#0f172a]">Download CV</a>
+    <a href="Sarthak_Main_resume.pdf" class="border border-teal-400 px-6 py-3 rounded text-teal-400 hover:bg-teal-400 hover:text-[#0f172a]">Download CV</a>
   </div>
 
   <!-- Social Icons -->
